<resources>
    <!-- Strings related to the app -->
    <string name="app_name">FloatAR</string>
    <string name="todo">ToDo</string>
    <string name="floatar_logo">FloatAR logo</string>

    <!-- Strings related to the main menu -->
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>
    <string name="about">Sobre la aplicación</string>

    <!-- Strings related to the game -->
    <string name="player_turn">1</string>
    <string name="computer_turn">2</string>
    <string name="score_format">Score</string>

    <!-- Strings related to the main activity -->
    <string name="single_player">Un jugador</string>
    <string name="exit_game">Salir</string>
    <string name="multi_player">Multijugador</string>

    <!-- Strings related to the create board activity -->
    <string name="but_boat_s1">Barco 1</string>
    <string name="but_boat_s2">Barco 2</string>
    <string name="but_boat_s3">Barco 3</string>
    <string name="but_boat_s4">Barco 4</string>
    <string name="but_horizontal_boat">Horizontal</string>
    <string name="but_vertical_boat">Vertical</string>

    <!-- Strings related to the single player activity -->
    <string name="player_board">Tablero del jugador</string>
    <string name="opponent_board">Tablero del oponente</string>

    <!-- Strings related to the settings activity -->
    <string name="settings_title">Configuración</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="theme_title">Tema oscuro</string>
    <string name="volume_title">Volumen</string>
    <string name="sava_changes_title">Guardar cambios</string>
    <string name="settings_language">Idioma</string>
    <string name="language_selector">Language selector</string>

    <!-- Strings related to the help activity -->
    <string name="help_title">Uso de FloatAR</string>
    <string name="help_text_title">¡Bienvenido a la pantalla de ayuda de FloatAR!</string>
    <string name="help_text_content">
        FloatAR es una aplicación de realidad aumentada para jugar el popular juego Hundir la Flota.
        La aplicación te permite colocar barcos en un tablero virtual y enfrentarte a otros jugadores
        en tiempo real. Aquí te presentamos algunas funcionalidades clave de la aplicación:\n\n

        \t\t - Tablero en realidad aumentada: La aplicación utiliza tecnología de realidad aumentada para
        simular un tablero en tiempo real. Para empezar a jugar, simplemente apunta tu dispositivo
        hacia una superficie plana y sigue las instrucciones en pantalla para calibrar la posición
        del tablero.\n\n

        \t\t - Colocar barcos mediante gestos: Una vez que el tablero esté configurado, puedes colocar tus
        barcos en el tablero virtual mediante gestos en pantalla. Arrastra y suelta los barcos en la
        posición deseada, y utiliza gestos de pellizco para rotarlos y ajustar su tamaño.\n\n

        \t\t - Detección de colisiones: La aplicación cuenta con un sistema de detección de colisiones para
        asegurar que los barcos no se superpongan en el tablero virtual. Si intentas colocar un barco
        en una posición inválida, la aplicación te alertará y te pedirá que lo muevas.\n\n

        \t\t - Sistema de juego: Una vez que ambos jugadores hayan colocado sus barcos, el juego puede
        comenzar. Dispara a los barcos del adversario haciendo clic en los cuadros del tablero, y
        utiliza los indicadores de la aplicación para ver si acertaste o no. Tu adversario también
        puede disparar a tus barcos, así que asegúrate de protegerlos bien.\n\n

        \t\t - Detectar victorias y derrotas: La aplicación cuenta con un sistema para detectar victorias
        y derrotas. El primer jugador en hundir todos los barcos del adversario gana el juego.\n\n

        \t\t - Puntuación y estado del juego en tiempo real: La aplicación muestra la puntuación y el
        estado del juego en tiempo real para ambos jugadores. Utiliza estos indicadores para
        planificar tus movimientos y mantenerte al tanto del progreso del juego.\n\n

        \t\t - Animaciones de explosiones y lanzamiento de misiles: La aplicación cuenta con animaciones
        para mostrar la explosión de los barcos y el lanzamiento de misiles de un lado a otro.
        Estas animaciones le dan vida al juego y hacen que sea más emocionante.\n

        \t\t - Personalización de los barcos: La aplicación te permite personalizar el aspecto de tus
        barcos para que se adapten a tu estilo. Cambia el color y la forma de tus barcos para
        hacerlos únicos y reconocibles.\n\n

        Esperamos que esta pantalla de ayuda te haya sido útil. ¡Diviértete jugando con FloatAR!
    </string>

    <!-- Strings related to the about activity -->
    <string name="version_number">0.1</string>
    <string name="developers_name">
        Antonio Vila Leis\nHugo Sanjiao Varela\nBreogán Fernández Moreira\nÓscar Alejandro Manteiga Seoane
    </string>
    <string name="developers_email">
        antonio.vila@udc.es\nh.sanjiao@udc.es\nbreogan.fernandez@udc.es\noscar.manteiga@udc.es
    </string>

    <!-- Strings related to the game over activity -->
    <string name="you_won">¡Has ganado!</string>
    <string name="you_lost">Has perdido</string>
    <string name="play_again">Jugar de nuevo</string>

    <!-- To-classify Strings -->
    <string name="confirm">Confirmar</string>
    <string name="not_implemented_yet">No implementado</string>
    <string name="not_implemented_yet_description">Esta actividad está en proceso de construcción.</string>
    <string name="info_logo">info_logo</string>
    <string name="create_lobby">Crear lobby</string>
    <string name="open_lobbies">Lobbies disponibles:</string>
    <string name="lobby_name">Nombre de la lobby</string>
    <string name="join_lobby">Unirse a lobby</string>
    <string name="your_name">Tu nombre</string>
    <string name="lobby">Salas</string>
    <string name="game_over">Fin del juego</string>
    <string name="create_board">Crear tablero</string>

</resources>