<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:checked="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_title"
        android:checked="true"/>

    <TextView
        android:id="@+id/languageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:spinnerMode="dropdown"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/language_selector"/>

    <TextView
        android:id="@+id/volumeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sava_changes_title"
        android:layout_gravity="center"/>

</LinearLayout>
