<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="10"
        android:rowCount="10"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:padding="5dp">
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_boat_s1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_boat_s1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/but_boat_s2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_boat_s2"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/but_boat_s3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_boat_s3"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/but_boat_s4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_boat_s4"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>