<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Imagen de construcción -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/info_logo"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_dialog_info"
        tools:ignore="ImageContrastCheck" />

    <!-- Título de la actividad -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/not_implemented_yet"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Descripción de la actividad -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/not_implemented_yet_description"
        android:textColor="#616161" />

</LinearLayout>
